fix: removed 1px shift of all elements on hover over certain navbar elements

--- a/app/assets/stylesheets/_navigation.sass
+++ b/app/assets/stylesheets/_navigation.sass
@@ -10,8 +10,6 @@
     .nav-link
       padding-left: 0.75rem
       padding-right: 0.75rem
-      &:hover
-        border-bottom: 1px solid #17191b
     .nav-item.dropdown
       .nav-link
         &:hover
